# DocStatus

./: .gitignore  README.md  main.py  pyproject.toml
BackEnd/app/api/v1/: auth.py  users.py
BackEnd/app/core/: config.py
BackEnd/app/schemas/: user.py
FrontEnd/: .gitignore  build.gradle.kts  settings.gradle.kts
FrontEnd/app/: build.gradle.kts
FrontEnd/app/src/androidTest/java/com/example/docstatus/: ExampleInstrumentedTest.kt
FrontEnd/app/src/main/: AndroidManifest.xml
FrontEnd/app/src/main/java/com/example/docstatus/: MainActivity.kt
FrontEnd/app/src/main/java/com/example/docstatus/data/: TokenManager.kt
FrontEnd/app/src/main/java/com/example/docstatus/data/local/: DatabaseModule.kt
FrontEnd/app/src/main/java/com/example/docstatus/utils/: BiometricAuthenticator.kt  QrCodeAnalyzer.kt  SessionManager.kt
FrontEnd/app/src/main/res/drawable/: ic_docstatus_logo.xml  ic_launcher_background_dark.xml  ic_launcher_background_final.xml  ic_launcher_foreground_final.xml  ic_qr_code_scanner_fg.xml
FrontEnd/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
FrontEnd/app/src/main/res/values/: strings.xml  themes.xml
FrontEnd/app/src/main/res/xml/: network_security_config.xml
FrontEnd/app/src/test/java/com/example/docstatus/: ExampleUnitTest.kt
FrontEnd/gradle/: libs.versions.toml
FrontEnd/gradle/wrapper/: gradle-wrapper.properties
app/: main.py
app/api/: deps.py
app/api/v1/: verifier.py
app/core/: security.py
app/db/: models.py  session.py
app/schemas/: document.py  token.py
(+19 files in other folders)
